[gd_scene load_steps=5 format=3 uid="uid://dd8km2o6vd228"]

[ext_resource type="Script" uid="uid://xgukkbxqbysf" path="res://combiner.gd" id="1_lyrof"]
[ext_resource type="Texture2D" uid="uid://cs0o4so1k0oq" path="res://sprites/combiner.png" id="2_lyrof"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk6sm"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dx1wu"]
size = Vector2(10, 10)

[node name="Combiner" type="Area2D"]
script = ExtResource("1_lyrof")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lyrof")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nk6sm")

[node name="GridChecker" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridChecker"]
shape = SubResource("RectangleShape2D_dx1wu")
debug_color = Color(0.979057, 0, 0.391171, 0.42)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
